# podcasts-list-to-rss

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  build.sh  decrypt_session.sh  requirments.txt  user.session.gpg
.github/workflows/: codeql-analysis.yml  main.yaml
app/: main.py  pocket_casts.py  rss.py  telegram.py
app/tests/: test_telegram.py
assets/: rss.xml
connectors/: base.py
scripts/: get_session_string.py  update_rss.sh
src/: __init__.py  base.py  cache.py  db.py  feeds.json  main.py  pocket_casts.py  pyproject.toml  rss.py  settings.py  telegram.py  utils.py
src/tests/: test_pocket_casts.py  test_telegram.py
